# rss-status-watcher

./: .env.example  .gitignore  LICENSE  README.md  feeds.yaml  pyproject.toml
src/rss_status_watcher/: __init__.py  watcher.py
tests/: test_watcher.py
