[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rss-status-watcher"
version = "0.1.0"
description = "Lightweight RSS/Atom status-page watcher that sends Discord webhook alerts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0.11",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[project.scripts]
rss-status-watcher = "rss_status_watcher.watcher:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
